Added app store button.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "peakyDicers",
-  "name": "Create React App Sample",
+  "name": "peakyDicers",
   "icons": [
     {
       "src": "favicon.ico",
